# cpp-banking-system

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  main_v4_latest.cpp
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  cmake.yml  coverage.yml
config/: README.md  app.json
data/: accounts.json
docs/: ARCHITECTURE.md  PERFORMANCE.md  SECURITY.md  TESTING.md
include/: account_service.h  admin_service.h  crypto.h  model.h  storage.h  util.h
scripts/: setup_dev.ps1  setup_dev.sh
src/: account_service.cpp  admin_service.cpp  crypto.cpp  main.cpp  storage.cpp  util.cpp
tests/: bank_tests.cpp
